# ic-seo-webapp

./: README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  vite.config.ts
router_library/: Cargo.toml
router_library/src/: assets.rs  build.rs  lib.rs  router.rs
src/: main.tsx  routeTree.gen.ts
src/hooks/: use-greet.tsx
src/routes/: __root.tsx  index.tsx  index2.tsx
src/routes/subpath/: $id.tsx
src/server/: Cargo.toml  build.rs
src/server/declarations/: index.d.ts  index.js  server.did  server.did.d.ts  server.did.js
src/server/src/: __route_tree.rs  lib.rs
src/server/src/routes/: index.rs  index2.rs  mod.rs
src/server/src/routes/subpath/: :id.rs
