[package]
name = "router_library"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
asset_util = { git = "https://github.com/dfinity/internet-identity.git" }
candid = "0.10"
ic-asset-certification = "3.0.3"
ic-canister-sig-creation = "1.2.0"
ic-cdk = "0.17"
ic-certification = "3.0.3"
ic-http-certification = "3.0.3"
include_dir = { version = "0.7.4", features = ["glob"] }
serde = "1.0.219"
